selfhost/tests/neg/okret.ail
// EXPECT: ok(str) but function returns !i64
fn f() -> !i64 {
  rt ok("nope")
}
println(0)
